[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Entities/Scripts/Enemy_Flying.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4000, 3000 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 21.0
height = 30.0

[sub_resource type="CapsuleShape2D" id=5]

[node name="Enemy_Flying" type="KinematicBody2D" groups=["Entity"]]
light_mask = 512
collision_layer = 4100
collision_mask = 133
script = ExtResource( 1 )
hp_max = 40

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 0, 4 )
polygon = PoolVector2Array( -20, 27, -9, 36, 9, 36, 20, 27, 24, 14, 24, -22, 16, -36, -16, -36, -24, -21, -24, 14 )

[node name="Polygon2D" type="Polygon2D" parent="."]
light_mask = 512
color = Color( 0.101961, 0.647059, 0.733333, 1 )
polygon = PoolVector2Array( -24, 18, -24, -18, -23, -24, -21, -30, -17, -35, -12, -39, -6, -41, 0, -42, 8, -41, 12, -39, 17, -35, 21, -30, 23, -24, 24, -18, 24, 18, 23, 24, 21, 30, 17, 35, 12, 39, 6, 41, 0, 42, -6, 41, -12, 39, -17, 35, -21, 30, -23, 24 )

[node name="VisionBox" type="Area2D" parent="."]
visible = false
modulate = Color( 0.643137, 0.141176, 0.141176, 1 )
self_modulate = Color( 0.847059, 0.0901961, 0.0901961, 1 )
position = Vector2( -1.14441e-05, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionBox"]
modulate = Color( 0.635294, 0.156863, 0.156863, 1 )
rotation = 3.14159
shape = SubResource( 2 )

[node name="AttackBox" type="Area2D" parent="."]
visible = false
position = Vector2( 24, 0 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2( -24, 0 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="DestroyBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="DestroyBox"]
scale = Vector2( 3, 3 )
shape = SubResource( 5 )

[node name="Timer_Jump" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="VisionBox" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="VisionBox" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="AttackBox" to="." method="_on_AttackBox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="DestroyBox" to="." method="_on_DestroyBox_body_entered"]
